# snapjaw

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml  snapjaw.py
.github/workflows/: ci.yml  codeql.yml  package.yml  pylint.yml
docs/superpowers/plans/: 2026-04-26-wotlk-support.md
docs/superpowers/specs/: 2026-04-26-wotlk-support-design.md
src/: gameversion.py  mygit.py  signature.py  snapjaw.py  snapjaw.spec  toc.py
tests/: conftest.py  test_gameversion.py  test_integration.py  test_mygit.py  test_signature.py  test_snapjaw_commands.py  test_snapjaw_config.py  test_snapjaw_helpers.py  test_snapjaw_states.py  test_snapjaw_url_parsing.py  test_toc.py
