[tool.poetry]
name = "snapjaw"
version = "1.0"
description = "Vanilla WoW AddOn Manager"
authors = ["Roman Kharitonov <rkharito@yandex.ru>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tabulate = "^0.9.0"
colorama = "^0.4.5"
dataclasses-json = "^0.6.3"
humanize = "^4.9.0"
pygit2 = "^1.14.0"

[tool.poetry.group.dev.dependencies]
nuitka = "^1.5.7"
setuptools = "^69.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
