[project]
authors = [
    {name = "Roman Kharitonov", email = "rkharito@yandex.ru"},
]
license = {text = "GPL-3.0-or-later"}
requires-python = "<3.12,>=3.10"
dependencies = [
    "tabulate<1.0.0,>=0.9.0",
    "colorama<1.0.0,>=0.4.5",
    "dataclasses-json<1.0.0,>=0.6.3",
    "humanize<5.0.0,>=4.9.0",
    "pygit2<2.0.0,>=1.14.0",
]
name = "snapjaw"
version = "1.0"
description = "Vanilla WoW AddOn Manager"

[dependency-groups]
dev = [
    "nuitka<2.0.0,>=1.5.7",
    "setuptools<70.0.0,>=69.0.3",
]
