[project]
authors = [
    {name = "Roman Kharitonov", email = "rkharito@yandex.ru"},
]
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.12,<3.13"
dependencies = [
    "colorama>=0.4.6",
    "dataclasses-json>=0.6.7",
    "humanize>=4.15.0",
    "pefile>=2024.8.26",
    "pygit2>=1.19.1",
    "tabulate>=0.9.0",
]
name = "snapjaw"
version = "1.0"
description = "Vanilla WoW AddOn Manager"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: mark test as integration test (requires network)",
    "slow: mark test as slow",
]
addopts = "-m 'not integration'"
filterwarnings = ["error"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "nuitka>=2.8.10",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
    "setuptools>=80.10.2",
    "types-colorama>=0.4.15.20250801",
    "types-tabulate>=0.9.0.20241207",
]
